syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_outer_classname = "FundingProto";

message CallTossPayResponse {
  string paymentKey = 1;
}

message CallTossPayRequest {
  string method = 1;
  int32 amount = 2;
  string orderId = 3;
  string orderName = 4;
  string successUrl = 5;
  string failUrl = 6;
}

service OrderService {
  rpc CallTossPay(CallTossPayRequest) returns (CallTossPayResponse){}
}